@@ -106,81 +106,51 @@ namespace Loris {
 //	CNMAT SDIF types
 // ---------------------------------------------------------------------------
 
-//	try to use the information gathered by configure:
-#if HAVE_CONFIG_H
-    #if SIZEOF_SHORT == 2
-    typedef unsigned short  sdif_unicode;
-    typedef short           sdif_int16;
-    #elif SIZEOF_INT == 2   
-    typedef unsigned int    sdif_unicode;
-    typedef int             sdif_int16;
-    #else
-    #error "cannot identify a two-byte integer type"
-    #endif
-    
-    #if SIZEOF_INT == 4
-    typedef int             sdif_int32;
-    typedef unsigned int    sdif_uint32;
-    #elif SIZEOF_LONG == 4  
-    typedef long            sdif_int32;
-    typedef unsigned long   sdif_uint32;
-    #else
-    #error "cannot identify a four-byte integer type"
-    #endif
+//	try to use the information gathered by configure -- if not using 
+//  config.h, then these have to be 
 
-    #if SIZEOF_FLOAT == 4
-    typedef float           sdif_float32;
-    #else
-    #error "cannot identify a four-byte floating-point type"
-    #endif
-    
-    #if SIZEOF_DOUBLE == 8
-    typedef double          sdif_float64;
-    #else
-    #error "cannot identify a eight-byte floating-point type"
-    #endif
+#if defined(SIZEOF_SHORT) && (SIZEOF_SHORT == 2)
+typedef unsigned short  sdif_unicode;
+typedef short           sdif_int16;
+#elif defined(SIZEOF_INT) && (SIZEOF_INT == 2)
+typedef unsigned int    sdif_unicode;
+typedef int             sdif_int16;
 #else
-#ifdef __sgi
-    typedef unsigned short  sdif_unicode;
-    typedef short           sdif_int16;
-    typedef int             sdif_int32;
-    typedef unsigned int    sdif_uint32;
-    typedef float           sdif_float32;
-    typedef double          sdif_float64;
-#elif defined(__WIN32__) || defined(_WINDOWS)
-    #ifndef _WINDOWS_
-        #include <windows.h>
-    #endif 
-    typedef unsigned short  sdif_unicode;
-    typedef short           sdif_int16;
-    typedef int             sdif_int32;
-    typedef unsigned int    sdif_uint32;
-    typedef float           sdif_float32;
-    typedef double          sdif_float64;
-#elif defined(__LINUX__)
-    typedef unsigned short  sdif_unicode;
-    typedef short           sdif_int16;
-    typedef int             sdif_int32;
-    typedef unsigned int    sdif_uint32;
-    typedef float           sdif_float32;
-    typedef double          sdif_float64;
+#error "SdifFile.C: cannot identify a two-byte integer type, define SIZEOF_SHORT or SIZEOF_INT"
+#endif
+
+#if defined(SIZEOF_INT) && (SIZEOF_INT == 4)
+typedef int             sdif_int32;
+typedef unsigned int    sdif_uint32;
+#elif defined(SIZEOF_LONG) && (SIZEOF_LONG == 4)
+typedef long            sdif_int32;
+typedef unsigned long   sdif_uint32;
 #else
-
-    /* These won't necessarily be the right size on any conceivable
-       platform, so you may need to change them by hand.  The call to
-       SDIF_Init() performs a sanity check of the sizes of these types,
-       so if they're wrong you'll find out about it. 
-       */
-
-    typedef unsigned short  sdif_unicode;
-    typedef short           sdif_int16;
-    typedef long            sdif_int32;
-    typedef unsigned long   sdif_uint32;
-    typedef float           sdif_float32;
-    typedef double          sdif_float64;
-
+#error "SdifFile.C: cannot identify a four-byte integer type, define SIZEOF_INT or SIZEOF_LONG"
 #endif
+
+// It is probably an unnecessary nuisance to check these, since there's
+// no alternative type to try. Requiring builders to define these 
+// symbols doesn't really serve any purpose. C++ doesn't provide a 
+// standard way to find a data type having a particular size 
+//  (as stdint.h does for interger types in C99).
+/*
+#if SIZEOF_FLOAT == 4
+typedef float           sdif_float32;
+#else
+#error "SdifFile.C: cannot identify a four-byte floating-point type"
 #endif
+
+#if SIZEOF_DOUBLE == 8
+typedef double          sdif_float64;
+#else
+#error "SdifFile.C: cannot identify a eight-byte floating-point type"
+#endif
+*/
+typedef float           sdif_float32;
+typedef double          sdif_float64;
+
+
 
 // ---------------------------------------------------------------------------
 //	SDIF_GlobalHeader
